# qmk_firmware_mykeyboard

./: pyproject.toml
keyboards/lily58/keymaps/dualab/: keymap.c
keyboards/splitkb/aurora/corne/keymaps/dualab/: keymap.bkp  keymap.c  keymap.txt  rules.mk
keyboards/splitkb/aurora/lily58/: lily58.c
keyboards/splitkb/aurora/lily58/keymaps/dualab/: config.h  keymap.c  keymap.txt  rules.mk
keyboards/splitkb/aurora/lily58/lib/: oled_common.c  oled_common.h
