[project]
name = "qmk-firmware-mykeyboard"
version = "0.1.0"
description = ""
authors = [
    {name = "dmike16",email = "cipmiky@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qmk (>=1.1.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
